# sphgeom

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .travis.yml  .yamllint.yaml  CMakeLists.txt  COPYRIGHT  LICENSE  MANIFEST.in  README.md  SConscript  SConstruct  bsd_license.txt  meson.build  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: pull_request_template.md
.github/workflows/: build.yaml  cmake.yaml  codeql-analysis.yml  docstyle.yaml  formatting.yaml  lint.yaml  rebase_checker.yaml  yamllint.yaml
doc/: CHANGES.rst  SConscript  doxygen.conf.in  htm.md  q3c.md
doc/changes/: DM-53933.bugfix.md  DM-54274.bugfix.md  README.rst
include/lsst/sphgeom/: Angle.h  AngleInterval.h  BigInteger.h  Box.h  Box3d.h  Chunker.h  Circle.h  CompoundRegion.h  Constants.h  ConvexPolygon.h  Ellipse.h  HEALPixel.h  HtmPixelization.h  Interval.h  Interval1d.h  LonLat.h  Matrix3d.h  Mq3cPixelization.h  NormalizedAngle.h  NormalizedAngleInterval.h  Pixelization.h  Q3cPixelization.h  RangeSet.h  Region.h  Relationship.h  SpatialRelation.h  TriState.h  UnitVector3d.h  Vector3d.h  codec.h  constants.h  curve.h  htm.h  orientation.h  python.h  q3c.h  utils.h
include/lsst/sphgeom/python/: interval.h  relationship.h  tristate.h  utils.h
lib/: SConscript
misc/: makeHilbertLuts.py
python/lsst/: __init__.py
python/lsst/sphgeom/: CMakeLists.txt  SConscript  __init__.py  _angle.cc  _angleInterval.cc  _box.cc  _box3d.cc  _chunker.cc  _circle.cc  _compoundRegion.cc  _continue_class.py  _convexPolygon.cc  _curve.cc  _ellipse.cc  _healPixel.cc  _healpixPixelization.py  _htmPixelization.cc  _interval1d.cc  _lonLat.cc  _matrix3d.cc  _mq3cPixelization.cc  _normalizedAngle.cc  _normalizedAngleInterval.cc  _orientation.cc  _pixelization.cc  _q3cPixelization.cc  _rangeSet.cc  _region.cc  _relationship.cc  _sphgeom.cc  _unitVector3d.cc  _utils.cc  _vector3d.cc  _yaml.py  angle.cc  angleInterval.cc  basics.i  box.cc  box3d.cc  chunker.cc  (+31 more)
src/: Angle.cc  Angle.h  AngleInterval.cc  AngleInterval.h  BigInteger.cc  Box.cc  Box3d.cc  CMakeLists.txt  Chunker.cc  Circle.cc  Circle.h  CompoundRegion.cc  Constants.h  ConvexPolygon.cc  ConvexPolygon.h  ConvexPolygonImpl.h  Ellipse.cc  Ellipse.h  HEALPixel.cc  HtmPixelization.cc  Interval1d.cc  LonLat.cc  Matrix3d.cc  Matrix3d.h  Mq3cPixelization.cc  NormalizedAngle.cc  NormalizedAngleInterval.cc  Orientation.cc  Orientation.h  PixelFinder.h  Q3cPixelization.cc  Q3cPixelizationImpl.h  RangeSet.cc  Region.cc  SConscript  UnitVector3d.cc  UnitVector3d.h  Utils.cc  Utils.h  Vector3d.cc  (+7 more)
tests/: AngleIntervalTest.cc  AngleTest.cc  BigIntegerTest.cc  Box3dTest.cc  BoxTest.cc  CMakeLists.txt  ChunkerTest.cc  CircleTest.cc  ConvexPolygonTest.cc  EllipseTest.cc  Interval1dTest.cc  LonLatTest.cc  Matrix3dTest.cc  NormalizedAngleIntervalTest.cc  NormalizedAngleTest.cc  OrientationTest.cc  RelationTestUtils.h  SConscript  Test.h  UnitVector3dTest.cc  Vector3dTest.cc  curveTest.cc  htmTest.cc  q3cTest.cc  relationshipTestUtils.h  test.h  testAngle.cc  testAngle.py  testAngleInterval.cc  testAngleIntervals.py  testBigInteger.cc  testBox.cc  testBox.py  testBox3d.cc  testBox3d.py  testChunker.cc  testCircle.cc  testCircle.py  testConvexPolygon.cc  testConvexPolygon.py  (+46 more)
ups/: sphgeom.cfg  sphgeom.table
