[metadata]
name = lsst-sphgeom
description = A spherical geometry library.
author = Rubin Observatory Data Management
author_email = dm-admin@lists.lsst.org
url = https://github.com/lsst/sphgeom
license = GPLv3+ License
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Astronomy
readme = file: README.md
long_description = file: README.md
long_description_content_type = text/markdown

keywords =
    lsst

[options]
zip_safe = False
python_requires = >=3.8
package_dir=
    =python
packages=find:
setup_requires =
  setuptools >=46.0
install_requires =
  numpy >=1.18
  healpy

[options.extras_require]
yaml = pyyaml>=5.1
test =
  pytest >= 3.2
  flake8 >= 3.7.5
  pytest-flake8 >= 1.0.4

[options.packages.find]
where = python

[flake8]
max-line-length = 110
max-doc-length = 79
ignore = E133, E226, E228, N802, N803, N806, N812, N815, N816, W503
exclude = __init__.py

[tool:pytest]
addopts = --flake8
flake8-ignore = E133 E226 E228 N802 N803 N806 N812 N815 N816 W503
